--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ build:
     CI : "false"
     PUBLIC_URL: $PUBLIC_URL
   script:
-    - npm install      
+    - npm install --legacy-peer-deps     
     - npm run build
   artifacts:
     paths:
